# byzpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
python/: pyproject.toml  setup.cfg
python/byzpy/: __init__.py  cli.py
python/byzpy/aggregators/: base.py
python/byzpy/aggregators/coordinate_wise/: __init__.py  _tiling.py  mean_of_medians.py  median.py  trimmed_mean.py
python/byzpy/aggregators/coordinate_wise/tests/: test_mean_of_medians.py
python/byzpy/aggregators/geometric_wise/: __init__.py  geometric_median.py  krum.py  minimum_diameter_average.py  monna.py  smea.py
python/byzpy/aggregators/geometric_wise/tests/: test_geometric_median.py  test_minimum_diameter_average.py  test_monna.py  test_smea.py
python/byzpy/aggregators/norm_wise/: __init__.py  caf.py  center_clipping.py  comparative_gradient_elimination.py
python/byzpy/aggregators/norm_wise/tests/: test_center_clipping.py  test_comparative_gradient_elimination.py
python/byzpy/attacks/: __init__.py  base.py  empire.py  gaussian.py  inf.py  label_flip.py  little.py  mimic.py  sign_flip.py
python/byzpy/attacks/tests/: test_gaussian.py  test_inf.py  test_label_flip_attack.py  test_mimic.py
python/byzpy/configs/: actor.py  backend.py
python/byzpy/engine/: __init__.py  node_cluster.py  node_runner.py
python/byzpy/engine/actor/: _wire.py  base.py  channels.py  factory.py  ipc.py  router.py
python/byzpy/engine/actor/backends/: gpu.py  process.py  remote.py  thread.py
python/byzpy/engine/actor/tests/: test_cpu_backends.py  test_gpu_backends.py
python/byzpy/engine/actor/transports/: __init__.py  tcp.py  ucx.py
python/byzpy/engine/backend/ndarray/: __init__.py  base.py  torch.py
python/byzpy/engine/graph/: executor.py  graph.py  operator.py  ops.py  pool.py  scheduler.py  subtask.py
python/byzpy/engine/graph/tests/: test_executor.py  test_graph.py  test_graph_input_message.py  test_message_trigger_op.py  test_node_ops.py  test_operator.py  test_pool.py  test_run_operator.py  (+1 more)
python/byzpy/engine/node/: __init__.py  actors.py  application.py  base.py  cluster.py  context.py  decentralized.py  distributed.py  mixin.py  remote_client.py  remote_server.py  router.py
python/byzpy/engine/parameter_server/: decentralized.py  ps.py  runner.py
python/byzpy/engine/peer_to_peer/: runner.py  topology.py  train.py
python/byzpy/engine/tests/: test_node_runner.py  test_p2p_runner.py  test_parameter_server_runner.py  test_parameter_server_transport.py  test_peer_to_peer_transport.py
python/byzpy/engine/transport/: base.py  local.py  tcp.py  tcp_simple.py
python/byzpy/pre_aggregators/: __init__.py  arc.py  base.py  bucketing.py  clipping.py  nnm.py
python/byzpy/pre_aggregators/tests/: test_arc.py  test_bucketing.py  test_clipping.py  test_nnm.py
python/byzpy/tests/: test_cli.py
(+144 files in other folders)
