[build-system]
requires = ["setuptools>=68,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byzpy"
version = "0.1.4"
description = "A research framework for Byzantine-robust distributed ML"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ByzPy contributors", email = "byzpy@users.noreply.github.com" }]
maintainers = [{ name = "ByzPy contributors", email = "byzpy@users.noreply.github.com" }]
license = { text = "MIT" }
dependencies = [
    "torch>=2.2,<2.6",
    "torchvision>=0.17,<0.21",
    "numpy>=1.24,<2.1",
    "matplotlib>=3.8,<3.11",
    "cloudpickle>=2.2,<4.0",
]
keywords = ["distributed-learning", "byzantine", "federated-learning", "pytorch", "robust-ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Byzpy/byzpy"
Documentation = "https://byzpy.github.io/byzpy/"
Source = "https://github.com/Byzpy/byzpy"
Issues = "https://github.com/Byzpy/byzpy/issues"

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.2.0",
    "ucxx-cu12>=0.38",
]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
byzpy = "byzpy.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["byzpy*"]

[tool.pytest.ini_options]
markers = [
    "real_actor_backends: run tests against the real actor backends instead of stubs",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["byzpy"]
