[metadata]
license_file = LICENSE

[options.package_data]
byzpy = py.typed

[flake8]
max-line-length = 100

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = byzpy

[tool:pytest]
addopts = -q
